my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EASTYPE/T_EASTYPE-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EASTYPE_STRUCT_H
#define T_EASTYPE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EASTYPE(void);


#endif /* not T_EASTYPE_STRUCT_H */
